// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.cloud.apigeeregistry.v1.controller;

import "google/api/field_behavior.proto";

option java_package = "com.google.cloud.apigeeregistry.v1.controller";
option java_multiple_files = true;
option java_outer_classname = "ControllerManifestProto";
option go_package = "github.com/apigee/registry/rpc;rpc";

// A Manifest represents a list of resources in a registry that should be
// automatically generated and updated in response to changes to their
// dependencies.
message Manifest {
  // Artifact identifier. May be used in YAML representations to indicate the id
  // to be used to attach the artifact.
  string id = 1;

  // Artifact kind. May be used in YAML representations to identify the type of
  // this artifact.
  string kind = 2;

  // A human-friendly name for the manifest.
  string display_name = 3;

  // A more detailed description of the manifest.
  string description = 4;

  // List of Generated resources.
  repeated GeneratedResource generated_resources = 5
      [(google.api.field_behavior) = REQUIRED];
}

// A GeneratedResource describes a resource that is stored in the
// registry and generated automatically using a specified action.
// Actions include invocations of the registry tool and other tools
// available to a deployed instance of the controller.
message GeneratedResource {
  // A pattern that specifies a generated resource.
  // This can specify one particular resource or a group of resources.
  // Format:
  //   apis/{api}/versions/{version}/specs/{spec}/artifacts/{artifact}
  //   apis/-/versions/-/specs/-/artifacts/-
  string pattern = 1 [(google.api.field_behavior) = REQUIRED];

  // A filter expression that limits the resources that match the pattern.
  string filter = 2;

  // The receipt field should be set to true if the action is not going to
  // store any artifact and instead requires a receipt artifact as its
  // generated resource.
  bool receipt = 3;

  // The dependencies of the resource.
  repeated Dependency dependencies = 4;

  // The action used to generate the resource.
  // An action can contain references to both the resource and dependencies
  // Example: "registry compute complexity $dependency0 $resource"
  string action = 5 [(google.api.field_behavior) = REQUIRED];
}

// A dependency of a generated resource is another resource in the registry
// which should always be older than the generated resource. When dependencies
// are updated, the generated resource that depends on them should be
// regenerated.
message Dependency {
  // A pattern that specifies a dependency.
  // This can specify one particular resource or a group of resources.
  // A pattern in a dependency can contain references to the original resource.
  // Format:
  //   $resource.api/versions/-/specs/-
  //   $resource.version/specs/-/artifacts/-
  string pattern = 1 [(google.api.field_behavior) = REQUIRED];

  // A filter expression that limits the resources that match the pattern.
  string filter = 2;
}
